[gd_scene load_steps=8 format=2]

[ext_resource path="res://SirRendrefinal.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://Player_fighter_final.png" type="Texture" id=4]
[ext_resource path="res://Boxing Ring_final.png" type="Texture" id=5]
[ext_resource path="res://healthbar.png" type="Texture" id=6]
[ext_resource path="res://Ring.gd" type="Script" id=7]

[node name="Ring" type="Node2D"]
script = ExtResource( 7 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 128, 120 )
texture = ExtResource( 5 )

[node name="f_healthbar" type="TextureProgress" parent="."]
margin_left = 62.0
margin_top = 9.0
margin_right = 124.0
margin_bottom = 20.0
max_value = 200.0
value = 200.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 1
tint_under = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="enemy" type="KinematicBody2D" parent="."]
position = Vector2( 123, 120 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="enemy"]
texture = ExtResource( 1 )
hframes = 12
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="enemy"]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 110, 155 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 4 )
hframes = 15
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]

[node name="e_healthbar" type="TextureProgress" parent="."]
margin_left = 132.0
margin_top = 9.0
margin_right = 194.0
margin_bottom = 20.0
max_value = 200.0
value = 200.0
texture_progress = ExtResource( 6 )

[connection signal="attack" from="enemy" to="player" method="_on_enemy_attack"]
[connection signal="health" from="enemy" to="." method="_on_enemy_health"]
[connection signal="f_health" from="player" to="." method="_on_player_f_health"]
[connection signal="punch" from="player" to="enemy" method="_on_player_punch"]
